--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@fontsource/jetbrains-mono": "^5.2.5",
     "@fontsource/press-start-2p": "^5.2.5",
+    "@iconify/react": "^5.2.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-scroll": "^1.9.3"
   },
   "devDependencies": {
