--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@fontsource/jetbrains-mono": "^5.2.5",
     "@fontsource/press-start-2p": "^5.2.5",
     "@iconify/react": "^5.2.0",
+    "axios": "^1.8.4",
+    "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-scroll": "^1.9.3"
+    "react-scroll": "^1.9.3",
+    "react-switch": "^7.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
