--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio_is",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -17,17 +17,18 @@
     "axios": "^1.8.4",
     "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^12.5.0",
+    "i18next": "^25.3.2",
     "lucide-react": "^0.483.0",
-    "next": "15.2.3",
+    "next": "^15.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
     "react-scroll": "^1.9.3",
     "react-switch": "^7.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -35,8 +36,6 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.14",
     "typescript": "^5"
   }
 }
