--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^12.5.0",
     "i18next": "^25.3.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.483.0",
     "next": "^15.4.5",
     "react": "^19.0.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
