--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@fontsource/press-start-2p": "^5.2.5",
     "@iconify/react": "^5.2.0",
     "@vercel/analytics": "^1.5.0",
-    "axios": "^1.8.4",
+    "axios": "^1.13.2",
     "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^12.5.0",
     "i18next": "^25.3.2",
+    "js-yaml": "^4.1.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.483.0",
-    "next": "^15.4.5",
+    "next": "^16.0.10",
     "react": "^19.0.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0",
